manifests/mpd/mpd-pv.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: s3-mpd
  namespace: common
spec:
  serviceName: s3-mpd
  replicas: 1
  selector:
    matchLabels:
      app: s3-mpd
  template:
    metadata:
      labels:
        app: s3-mpd
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: minio-data
                operator: Exists
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      containers:
      # mount minio for complete
      - name: mount-data
        imagePullPolicy: IfNotPresent
        image: rclone/rclone:latest
        securityContext:
          privileged: true
        args:
        - "mount"
        - ":s3:mpd-data/"
        - "/vol/mnt"
        - "--s3-provider=Minio"
        - "--s3-env-auth=true"
        - "--s3-region="
        - "--s3-endpoint=http://minio.minio.svc:9000"
        - "--allow-other"
        - "--allow-non-empty"
        - "--vfs-cache-mode=off"
        - "--no-modtime"
        - "--read-only"
        volumeMounts:
        - name: vol-data
          mountPath: /vol/mnt
          mountPropagation: Bidirectional
      volumes:
      - name: vol-data
        hostPath:
          path: /var/lib/kubelet/hostpath/mpd-data
          type: DirectoryOrCreate
