manifests/mpd/mpd.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mpd
  namespace: common
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mpd
  template:
    metadata:
      labels:
        app: mpd
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      containers:
      - name: mpd
        imagePullPolicy: Always
        image: randomcoww/mpd:0.22.1
        ports:
        - containerPort: 8000
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/mpd.conf
          name: mpd-config
          subPath: mpd.conf
        - mountPath: /mpd/music
          name: mpd-data
        - mountPath: /mpd/cache
          name: mpd-cache
      - name: ympd
        imagePullPolicy: Always
        image: randomcoww/ympd:latest
        args:
        - "-h"
        - "127.0.0.1"
        - "-p"
        - "6600"
        - "-w"
        - "8001"
        ports:
        - containerPort: 8001
          protocol: TCP
      volumes:
      - name: mpd-cache
        hostPath:
          path: /var/pv/tmp/mpd-cache
          type: DirectoryOrCreate
      - name: mpd-config
        configMap:
          name: mpd-config
      - name: mpd-data
        persistentVolumeClaim:
          claimName: mpd-data-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: mpd
  namespace: common
spec:
  ports:
  - name: stream
    port: 8000
  - name: control
    port: 8001
  selector:
    app: mpd
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mpd
  namespace: common
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: mpd.fuzzybunny.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: mpd
          servicePort: control
  - host: stream.fuzzybunny.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: mpd
          servicePort: stream
  tls:
  - secretName: tls-ingress
